--- a/app/views/home_pages/home.html.erb
+++ b/app/views/home_pages/home.html.erb
@@ -8,7 +8,7 @@
   </h2>
 
   <%= link_to "目的地を検索する", '#', class: "btn btn-lg btn-primary" %>
-  <%= link_to "ログインする", '#', class: "btn btn-lg btn-primary" %>
+  <%= link_to "ログインする", login_path, class: "btn btn-lg btn-primary" %>
 
 </div>
 
