--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,16 +3,15 @@
     <%= link_to "タビナビ", root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "ホーム",   root_path %></li>
-        <li><%= link_to "新規登録", signup_path %></li>
+        <li><%= link_to "ホーム", root_path %></li>
         <% if logged_in? %>
-          <li><%= link_to "ユーザー", users_path %></li>
+          <li><%= link_to "ユーザー一覧", users_path %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               アカウント <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
-              <li><%= link_to "プロフィール", current_user %></li>
+              <li><%= link_to "マイページ", current_user %></li>
               <li><%= link_to "設定", edit_user_path(current_user) %></li>
               <li class="divider"></li>
               <li>
@@ -21,7 +20,7 @@
             </ul>
           </li>
         <% else %>
-          <li><%= link_to "新規作成", signup_path %></li>
+          <li><%= link_to "新規登録", signup_path %></li>
         <% end %>
       </ul>
     </nav>
