--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -18,7 +18,7 @@
       <%= f.label :パスワード確認 %>
       <%= f.password_field :password_confirmation, class: 'form-control' %>
 
-      <%= f.submit "Save changes", class: "btn btn-primary" %>
+      <%= f.submit "変更を保存する", class: "btn btn-primary" %>
     <% end %>
 
   </div>
