--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -8,7 +8,7 @@ $gray-medium-light: #eaeaea;
 /* universal */
 
 body {
-  padding-top: 60px;
+  padding-top: 200px;
 }
 
 section {
@@ -20,9 +20,15 @@ textarea {
 }
 
 .center {
+  color:white;
+  opacity: 0.6;
+  font-size: 20px;
   text-align: center;
+  background-color: transparent;
   h1 {
+    margin-top: 10px;
     margin-bottom: 10px;
+    font-size: 80px;
   }
 }
 
@@ -30,6 +36,7 @@ textarea {
 
 h1, h2, h3, h4, h5, h6 {
   line-height: 1;
+  font-family: arial black;
 }
 
 h1 {
@@ -37,6 +44,7 @@ h1 {
   letter-spacing: -2px;
   margin-bottom: 30px;
   text-align: center;
+  font-weight: bold;
 }
 
 h2 {
@@ -45,7 +53,13 @@ h2 {
   margin-bottom: 30px;
   text-align: center;
   font-weight: normal;
-  color: $gray-light;
+  color: white;
+  opacity: 0.80;
+}
+
+
+h3{
+  text-align: center;
 }
 
 p {
@@ -61,27 +75,27 @@ p {
   margin-right: 10px;
   font-size: 1.7em;
   color: white;
-  text-transform: uppercase;
   letter-spacing: -1px;
   padding-top: 9px;
   font-weight: bold;
   &:hover {
     color: white;
-    text-decoration: none;
+    text-decoration: underline;
   }
 }
 
 /* footer */
 
 footer {
-  margin-top: 45px;
-  padding-top: 5px;
+  margin-top: 350px;
+  padding-top: 10px;
   border-top: 1px solid $gray-medium-light;
-  color: $gray-light;
+  opacity: 0.55;
+  color: white;
   a {
-    color: $gray;
+    color: white;
     &:hover {
-      color: $gray-darker;
+      color: white;
     }
   }
   small {
@@ -179,10 +193,17 @@ input {
 }
 
 
-/* Users index */
+.form-check-label{
+  float:left;
+  margin: 10px;
+}
+
+/* Users */
 
 .users {
+  font-size: 30px;
   list-style: none;
+  text-align: center;
   margin: 0;
   li {
     overflow: auto;
@@ -192,7 +213,12 @@ input {
 }
 
 
-/* Posts index */
+.btn-info{
+  margin: 0 auto;
+}
+
+
+/* Posts */
 
 .posts_button {
     a {
@@ -209,7 +235,7 @@ input {
 
 .posts_button {
     a {
-        margin: 0 8px;
+        margin: 20px 8px;
     }
 }
 
@@ -227,4 +253,44 @@ input {
 .posts__select {
   display: inline-block;
   width: auto;
+}
+
+
+.tag_search{
+  margin-bottom: 20px;
+}
+
+
+.bg-info{
+  padding: 20px 0 20px 0;
+  text-align: center;
+}
+
+.card-img{
+  text-align:center;
+  margin:10px 0 10px 0;
+}
+
+
+.card-btn{
+  text-align:right;
+  margin-right:10px;
+}
+
+.card-map{
+  margin: 20px 10px 10px 10px;
+}
+
+.card{
+  border-top: 10px double #8c8b8b;
+  border-bottom: 10px double #8c8b8b;
+  border-left: 10px double #8c8b8b;
+  border-right: 10px double #8c8b8b;
+}
+
+
+/* Map */
+#map {
+  height: 300px;
+  width: 670px;
 }
