--- a/app/views/home_pages/home.html.erb
+++ b/app/views/home_pages/home.html.erb
@@ -1,19 +1,26 @@
-<div class="center jumbotron">
-  <h1>タビナビ</h1>
+<!doctype html>
+<html>
+  <body class=home>
+    <div class="center jumbotron">
+      <h1>タビナビ</h1>
+    </div>
 
-  <h2>
-    おすすめスポットを共有し、旅に取り入れよう！<br>
-    メールアドレス：tabinavi@tabinavi.com<br>
-    パスワード：tabinavi<br>
-  </h2>
+      <h2>
+        おすすめスポットを共有し、旅に取り入れよう！<br>
+        メールアドレス：tabinavi@tabinavi.com<br>
+        パスワード：tabinavi<br>
+      </h2>
 
-  <% if logged_in? %>
-    <%= link_to "目的地を検索する", posts_path, class: "btn btn-lg btn-primary" %>
-    <%= link_to "ログアウト", logout_path, method: :delete, class: "btn btn-lg btn-primary" %>
-  <% else %>
-    <%= link_to "ログインせずに目的地を検索する", posts_path, class: "btn btn-lg btn-primary" %>
-    <%= link_to "ログインする", login_path, class: "btn btn-lg btn-primary" %>
-  <% end %>
+      <div class=home_btn >
+      <% if logged_in? %>
+        <%= link_to "目的地を検索する", '/search', class: "btn btn-lg btn-default" %>
+        <%= link_to "ログアウト", logout_path, method: :delete, class: "btn btn-lg btn-default" %>
+      <% else %>
+        <%= link_to "ログインせずに目的地を検索する", '/search', class: "btn btn-lg btn-default" %>
+        <%= link_to "ログインする", login_path, class: "btn btn-lg btn-default" %>
+      <% end %>
+      </div>
+  </body>
+</html>
 
-</div>
 
