--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,12 +1,4 @@
-<% if flash[:error_messages] %>
-    <div class="alert alert-danger">
-        <ul>
-            <% flash[:error_messages].each do |msg| %>
-                <li><%= msg %></li>
-            <% end %>
-        </ul>
-    </div>
-<% end %>
+<%= render 'shared/error_messages_post' %>
 
 
 
@@ -14,23 +6,14 @@
     <div class="form-group">
         <%= f.label :name, '投稿場所' %>
         <%= f.text_field :name, class: 'form-control' %>
-        <small id="poster-tip" class="form-text text-muted">
-            投稿場所を入力してください。
-        </small>
     </div>
     <div class="form-group">
         <%= f.label :address, '住所' %>
         <%= f.text_field :address, class: 'form-control' %>
-        <small id="address-tip" class="form-text text-muted">
-            投稿場所の住所を入力してください。
-        </small>
     </div>
     <div class="form-group">
         <%= f.label :content, '投稿内容' %>
         <%= f.text_area :content, class: 'form-control', rows:10 %>
-        <small id=content-tip" class="form-text text-muted">
-            投稿内容を入力してください。 
-        </small>
     </div>
     
     
@@ -44,8 +27,8 @@
     <%= f.collection_check_boxes(:tag_ids, Tag.all, :id, :name) do |tag| %>
       <div class="form-check">
         <%= tag.label class: 'form-check-label' do %>
-          <%= tag.check_box class: 'form-check-input' %>
           <%= tag.text %>
+          <%= tag.check_box class: 'form-check-input' %>
         <% end %>
       </div>
     <% end %>
@@ -53,7 +36,4 @@
     
     
     <%= f.submit '投稿', class: 'btn btn-info btn-block' %>
-    <small id="submit-tip" class="form-text text-muted">
-        投稿する前に投稿内容を見直してください!
-    </small>
 <% end %>
