--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -2,7 +2,7 @@
   <h1>編集</h1>
 <div class="d-flex align-items-center">
   <div class="ml-auto posts_button">
-      <%= link_to '投稿一覧', posts_path, class: 'btn btn-outline-info' %>
+      <%= link_to '投稿一覧', posts_path, class: 'btn btn-info' %>
   </div>
 </div>
 <%= form_for @post do |f| %>
