--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -19,7 +19,7 @@
       <%= f.label :パスワード確認 %>
       <%= f.password_field :password_confirmation, class: 'form-control' %>
 
-      <%= f.submit "アカウントを作成する", class: "btn btn-primary" %>
+      <%= f.submit "アカウントを作成する", class: "btn btn-info" %>
     <% end %>
   </div>
 </div>
