--- a/app/views/home_pages/home.html.erb
+++ b/app/views/home_pages/home.html.erb
@@ -6,9 +6,20 @@
     </div>
 
       <h2>
-        おすすめスポットを共有し、旅に取り入れよう！<br>
-        メールアドレス：tabinavi@tabinavi.com<br>
-        パスワード：tabinavi<br>
+        訪れたことのあるおすすめ場所を投稿し共有することで旅行時等で参考にすることができます。<br>
+        旅行サイトや観光案内本では載っていない、現地の人のみが知っているようない情報を共有することを目的に制作しました。<br>
+        <br>
+        <ログインせずにできること><br>
+        投稿された目的地名や住所名で行ってみたい場所の検索<br>
+        タグ付されている投稿一覧から、タグ検索<br>
+        検索結果の詳細情報（説明文や画像やマップ）閲覧<br>
+        <br>
+        <ログインしてできること><br>
+        おすすめしたい場所の投稿・編集・削除<br>
+        ユーザー一覧及び詳細情報閲覧<br>
+        新規投稿<br>
+        アカウント編集<br>
+        ユーザーの削除（管理者権限のみ）<br>
       </h2>
 
       <div class=home_btn >
