--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -26,7 +26,7 @@ textarea {
   text-align: center;
   background-color: transparent;
   h1 {
-    margin-top: 10px;
+    margin-top: 0px;
     margin-bottom: 10px;
     font-size: 80px;
   }
@@ -51,10 +51,12 @@ h2 {
   font-size: 1.2em;
   letter-spacing: -1px;
   margin-bottom: 30px;
-  text-align: center;
+  padding:10px 0 10px 0;
+  text-align: left;
   font-weight: normal;
-  color: white;
-  opacity: 0.80;
+  color: black;
+  background-color: white;
+  opacity: 0.7;
 }
 
 
