--- a/app/views/home_pages/home.html.erb
+++ b/app/views/home_pages/home.html.erb
@@ -7,7 +7,7 @@
 
       <h2>
         訪れたことのあるおすすめ場所を投稿し共有することで旅行時等で参考にすることができます。<br>
-        旅行サイトや観光案内本では載っていない、現地の人のみが知っているようない情報を共有することを目的に制作しました。<br>
+        旅行サイトや観光案内本では載っていない、現地の人のみが知っているような情報を共有することを目的に制作しました。<br>
         <br>
         <ログインせずにできること><br>
         投稿された目的地名や住所名で行ってみたい場所の検索<br>
